clean long polling (defasync) example code

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="page-wrap">
-      <h1>Simple chartroom</h1>
+      <h1>Simple chartroom(long polling)</h1>
       <div id="history-wrap">
         <ul id="history"></ul>
       </div>
